--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     }
     h1 {
       color: #FFFFFF; /* 見出しの文字色を白にする */
-    }
+   font-siz: 40px; }
+    p{font-size : 20px;}
   </style>
 </head>
 <body>
