--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>私のホームページ</title>
+  <title>プログラム勉強用</title>
   <style>
     body {
       background-color: #000000; /* 背景を黒にする */
@@ -16,5 +16,12 @@
 <body>
   <h1>こんにちは！</h1>
   <p>これはGitHub Pagesで作ったテストページです。</p>
+ <p>ITパスポートをとってからの流れを考えています。</p>
+<p>新卒で入った職場を3日で辞めたため貯金が0に等しいです。</p>
+  <p>そのためアルバイトをしながらIT関係の勉強を進め、就活中にIパスをとり基本情報をその語に取得したいと考えています。<p/>
+    <p>なおなぜ真っ先に就活をしないかという事を説明すると、</p>
+      <p>お金がないという理由が一番大きいですが、そもそも大学時代経営学部に通い、新卒でITと全く関係ない職場を選んだため、
+        ITに興味があると就活で主張しても説得力がないと考えたからです。</p>
+        <p>そのためITパスをとって、基本情報を勉強中という前向きな姿勢を示す必要があると考えました。</p>
 </body>
-</html>
+<html>
