--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
       color: #FFFFFF; /* 見出しの文字色を白にする */
    font-size: 40px; }
     p{font-size : 20px;}
+    p{font-size: 20px;
+     color: #FFFFFF;/*段落の文字を白色にする*/}
   </style>
 </head>
 <body>
